JWT token Implemention

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.servlet.multipart.max-request-size=20MB
 
 project.image=images/
 
+#spring.security.user.name=ansar
+#spring.security.user.password=ansar123
+
 
