--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>blog-app-api</name>
 	<description>This is blog api project</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +66,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
