--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 server.port=9090
 
 #Db configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/blog-app-api
-spring.datasource.username=root
-spring.datasource.password=root
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 project.image=images/
+
+spring.profiles.active=dev
 
 #spring.security.user.name=ansar
 #spring.security.user.password=ansar123
