--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-server.port=7086
+server.port=5000
 spring.datasource.url=jdbc:mysql://blog-db.cqdiuahzhavx.us-west-2.rds.amazonaws.com:3306/blog-app-api
 spring.datasource.username=ansar
 spring.datasource.password=ansar2186
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
